<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">I.P.T.Letrinhas</string>
    <string name="entrar">Entrar</string>
    <string name="letrinhas">Letrinhas</string>
    <string name="Recording">A gravar</string>
    <string name="start">Começar</string>
    <string name="stop">Parar</string>
    <string name="play">Ouvir</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_escolhe_teste">Escolher Teste</string>
    <string name="action_settings">Settings</string>
    <string name="sair">sair</string>
    <string name="voltar">voltar</string>
    <string name="teste">Teste</string>
    <string name="title_activity_esc_modo">Escolher Modo do teste</string>
    <string name="escolhe_Modo">Escolher o Modo do teste a realizar</string>
    <string name="porAluno">Por Aluno</string>
    <string name="porProf">Por Professor</string>
    <string name="title_activity_leitura_texto">Leitura de Textos</string>
    <string name="title_activity_leitura_palavras">Leitura de Palavras</string>
    <string name="concetList">ConectList</string>
    <string name="title_activity_texto">Teste de texto</string>
    <string name="title_activity_teste_texto">Teste de texto</string>
    <string name="title_activity_teste__imagem">Teste de imagens</string>
    <string name="title_activity_teste__palavras">Teste de palavras</string>
    <string name="title_activity_teste__poema">Teste de poema</string>
    <string name="login_title">Login Screen</string>
    <string name="username">Username</string>
    <string name="password">Pin</string>
    <string name="login">Login</string>
    <string name="title_activity_autenticacao">Autenticacao</string>
    <string name="min"></string>
    <string name="sec"></string>
    <string name="vacilar">Vacilações</string>
    <string name="fragment">Fragmentações</string>
    <string name="silabac">Silabações</string>
    <string name="repeti">Repetições</string>
    <string name="exepriment">experiência</string>
    <string name="menos">menos</string>
    <string name="mais">mais</string>
    <string name="espaco">"                        "</string>
    <string name="numer">20</string>
    <string name="pErrada">P. Erradas:</string>
    <string name="btnback">Voltar</string>
    <string name="title_activity_all__tests">Todos os Testes</string>
    <string name="btnMainAllTest">Todos os Testes</string>
    <string name="btnMainSendResult">Criar e enviar Resultado de Teste</string>
    <string name="btnSendResult">Enviar Resultado</string>
    <string name="title_activity_send__result_test">Enviar Resultado de Teste</string>
    <string name="lb_mainIpServidor">IP do Servidor:</string>
    <string name="mainPorta">Porta:</string>
    <string name="title_activity_receber_imagem">ReceberImagem</string>
    <string name="btnReceberImagem">Ver imagem da BD Profs</string>
    <string name="title_activity_reprod_audio">ReprodAudio</string>
    <string name="title_activity_main_bd">MainBD</string>
    <string name="pontErrada">Pontuação</string>
    <string name="PalavraErrada">Palavra Errada</string>
    <string name="CancelarSeleccao">Cancelar Seleccao</string>
    <string name="title_activity_resultado">Resultado</string>
    <string name="resultado">Resultado do teste</string>
    <string name="avancar">Avançar</string>
    <string name="act_BD">Atualizar a Base de Dados</string>
    <string name="title_activity_escolhe_escola">Escolher Escola</string>
    <string name="escola">escola</string>
    <string name="title_activity_escolhe_disciplina">Escolher disciplina</string>
    <string name="ano">ano</string>
    <string name="title_activity_escolhe_aluno">Escolher Aluno</string>
    <string name="aluno">Aluno</string>
    <string name="title_activity_escolhe_professor">Escolher Professor</string>
    <string name="professor">Professor</string>
    <string name="nomeTeste">Nome do teste</string>
    <string name="tempoLeitura">Tempo de leitura</string>
    <string name="expressividade">Expressividade</string>
    <string name="ritmo">Ritmo</string>
    <string name="nota">Nota</string>
    <string name="perguntaImagem">perguntaImagem</string>
    <string name="title_activity_custom">Custom</string>
    <string name="portugues">Português</string>
    <string name="ingles">Inglês</string>
    <string name="estMeio">Estudo do meio</string>
    <string name="matematica">Matemática</string>
    <string name="escolheDisciplina">Escolhe a disciplina</string>
    <string name="agrupamento">Agrupamento Artur Gonçalves</string>
    <string name="escProfessor">Escolher professor</string>
    <string name="title_activity_escolhe_turma">Escolher Turma</string>
    <string name="hello_world">Hello world!</string>
    <string name="escolherTurma">Escolher Turma</string>
    <string name="escolherAluno">Escolher Aluno</string>
    <string name="escolherModo">Menu</string>
    <string name="realizarTeste">Realizar teste(s)</string>
    <string name="corrigirTeste">Corrigir teste(s)</string>
    <string name="title_activity_escolhe_tipo_teste">Escolher Tipo de Teste</string>
    <string name="escolheTipoTeste">Escolher Tipo de Teste</string>
    <string name="demo">Demo</string>
    <string name="iniciar">Iniciar</string>
    <string name="ExemploTexto">Alfabetização\n
        A alfabetização consiste no aprendizado do alfabeto e de sua utilização como código de comunicação. De um modo mais abrangente, a alfabetização é definida como um processo no qual o indivíduo constrói a gramática e em suas variações. Esse processo não se resume apenas na aquisição dessas habilidades mecânicas (codificação e decodificação) do acto de ler, mas na capacidade de interpretar, compreender, criticar, resignificar e produzir conhecimento.1 Todas essas capacidades citadas anteriormente só serão concretizadas se os alunos tiverem acesso a todos os tipos de portadores de textos. O aluno precisa encontrar os usos sociais da leitura e da escrita.2 A alfabetização envolve também o desenvolvimento de novas formas de compreensão e uso da linguagem de uma maneira geral.\n
        A alfabetização de um indivíduo promove sua socialização, já que possibilita o estabelecimento de novos tipos de trocas simbólicas com outros indivíduos, acesso a bens culturais e a facilidades oferecidas pelas instituições sociais. A alfabetização é um fator propulsor do exercício consciente da cidadania e do desenvolvimento da sociedade como um todo.\n
        A incapacidade de ler e escrever é denominada analfabetismo, enquanto que a incapacidade de interpretar textos simples é chamada analfabetismo funcional ou semianalfabetismo.</string>
    <string name="ExemploPoema">Ó lua que vais tão alta,\n
		Redonda como um tamanco!\n
		Ó Maria, traz cá a escada,\n
		Que eu não chego lá com um banco.\n
		\n
		A minha mãe fez um bolo de alfazema.\n
		Pedi-lhe uma fatia, e ela deu-ma!\n
		\n
		Da minha casa à tua\n
		vai uma grande distância,\n
		Cuidado pelo caminho, \n
		não vás escorregar numa casaca de melância!\n
		\n
 		o meu nome é dionísio\n
		pediram-me para fazer um poema, e fízi-o.\n	</string>
    <string name="title_activity_listar_submissoes">Listar Submissoes</string>
    <string name="corrigirSubmisoes">Escolher testes a corrigir</string>
    <string name="cancel">cancelar</string>
    <string name="title_activity_resumo_submissoes">Resumo Submissoes</string>
    <string name="resumo">Resumo</string>
    <string name="pararRep">Parar de ouvir</string>
    <string name="title_activity_relatas_correction">RelatasCorrection</string>
    <string name="botao">Botao</string>
    <string name="ZeroValues">0</string>
    <string name="ZeroValuesStr">empty</string>
    <string name="apagar">apagar</string>
    <string name="avaliar">avaliar</string>
    <string name="listarResut">Ver Resultados</string>
    <string name="verResut">Ver Resultados</string>
    <string name="title_activity_lista_resultados">Listar Resultados</string>
    <string name="listResult">Listar Resultados</string>
    <string name="word">Palavra</string>
    <string name="insPin">Insira o PIN</string>
    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="versus">Vs</string>

</resources>