<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/escModo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    android:configChanges="orientation|keyboardHidden|screenSize"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/dim40"
    android:paddingRight="@dimen/dim40"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="landscape"
    tools:context="com.letrinhas05.escolhe.EscModo" >

    <ImageView
        android:id="@+id/escMlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/letrinhas"
        android:src="@drawable/letrinhas" />

    <TextView
        android:id="@+id/escMRodape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/escMbtnVoltar"
        android:layout_marginLeft="@dimen/dim10"
        android:layout_toRightOf="@+id/escMbtnVoltar"
        android:text="@string/letrinhas"
        android:textColor="#5ddfff"
        android:textSize="@dimen/dim30"
        android:textStyle="bold" />

    <Button
        android:id="@+id/escMbtnVoltar"
        android:layout_width="@dimen/dim100"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/escMlogo"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/voltar"
        android:drawableTop="@drawable/voltar"
        android:text="@string/voltar" />

    <TextView
        android:id="@+id/escMCabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/escMlogo"
        android:layout_toRightOf="@+id/escMlogo"
        android:text="@string/escolherModo"
        android:textColor="#5ddfff"
        android:textSize="@dimen/dim50"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/escMEscola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/escMCabecalho"
        android:layout_below="@+id/escMCabecalho"
        android:text="Escola escolhida"
        android:textSize="@dimen/dim30" />

    <TextView
        android:id="@+id/tvMProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imgProfEscmODO"
        android:layout_toLeftOf="@+id/imgProfEscmODO"
        android:text="Professor escolhido"
        android:textSize="@dimen/dim30" android:layout_marginRight="@dimen/dim20"/>

    <ImageView
        android:id="@+id/imgProfEscmODO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/escMCabecalho"
        android:contentDescription="@string/professor"
        android:src="@drawable/professora" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btModoAluno"
            style="@style/ButtonBarButton"
            android:layout_width="@dimen/dim200"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/dim70"
            android:drawableTop="@drawable/boy"
            android:text="@string/realizarTeste"
            android:textSize="@dimen/dim30"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btModoProf"
            style="@style/ButtonBarButton"
            android:layout_width="@dimen/dim200"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dim70"
            android:layout_marginRight="@dimen/dim70"
            android:drawableTop="@drawable/docentes"
            android:text="@string/corrigirTeste"
            android:textSize="@dimen/dim30"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btVerResult"
            style="@style/ButtonBarButton"
            android:layout_width="@dimen/dim200"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dim70"
            android:drawableTop="@drawable/index"
            android:text="@string/verResut"
            android:textSize="@dimen/dim30"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvMAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/dim40"
        android:text="Aluno Escolhido"
        android:textSize="@dimen/dim25" />

    <TextView
        android:id="@+id/tvMTurma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvMAluno"
        android:layout_alignBottom="@+id/tvMAluno"
        android:layout_toLeftOf="@+id/tvMAluno"
        android:text="Turma Escolhida"
        android:textSize="@dimen/dim25" />

    <ImageView
        android:id="@+id/ivMAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvMAluno"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/aluno"        
        android:src="@drawable/boy1" />

</RelativeLayout>