<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/testTexto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="clip_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/dim30"
    android:paddingRight="@dimen/dim30"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.letrinhas05.Teste_Texto" >

    <TextView
        android:id="@+id/resCabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/logo2"
        android:text="@string/resultado"
        android:textColor="#5ddfff"
        android:textSize="@dimen/dim30"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/resAvancar"
        android:layout_width="@dimen/dim100"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/avancar"
        android:scaleType="fitCenter"
        android:src="@drawable/right" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resAvancar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/resCabecalho" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teste"
                android:textSize="@dimen/dim20"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>